--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+title: LilyPad - Wearables i DD Lab
+description: Vejledning til brug af DD Labs LilyPads  
+logo: LilyPad/lilypad.jpg
+show_downloads: false
